--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "ts-node src/index.ts",
+    "start": "node dist/src/index.js",
     "build": "rm -rf dist && tsc --build",
     "dev": "nodemon src/index.ts",
     "test": "glob -c 'tsx --test' 'test/unit/**/*.test.ts'",
@@ -22,7 +22,15 @@
     "test:ci": "npm run test:unit:100"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@dnlup/fastify-traps": "^3.0.2",
+    "@fastify/autoload": "^5.8.1",
+    "@fastify/cors": "^9.0.1",
+    "api-problem": "^9.0.2",
+    "dotenv": "^16.4.5",
+    "fastify": "^4.27.0",
+    "http-status-codes": "^2.3.0"
+  },
   "engines": {
     "node": ">=20"
   },
@@ -35,9 +43,11 @@
     "dist"
   ],
   "devDependencies": {
+    "sinon": "^17.0.1",
     "@semantic-release/github": "^10.0.5",
     "@semantic-release/release-notes-generator": "^12.1.0",
     "@types/glob": "^8.1.0",
+    "@types/sinon": "^17.0.3",
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
